Adds swagger docs for /v1/tigers endpoint. Minor corrections in existing docs
